# TinyInfiniTensor

./: .gitignore  CMakeLists.txt  Makefile
include/core/: allocator.h  blob.h  common.h  data_type.h  graph.h  kernel.h  object.h  operator.h  ref.h  runtime.h  tensor.h
include/operators/: matmul.h  transpose.h  unary.h
include/utils/: data_generator.h  operator_utils.h
src/core/: allocator.cc  graph.cc  op_type.cc  operator.cc  runtime.cc  tensor.cc
src/operators/: concat.cc  matmul.cc  transpose.cc  unary.cc
src/utils/: exception.cc  operator_utils.cc
test/core/: test_allocator.cc  test_graph.cc
test/kernels/nativecpu/: test_nativecpu_concat.cc  test_nativecpu_elementwise.cc  test_nativecpu_transpose.cc
test/operators/: test_concat.cc  test_matmul.cc
